update global body css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,29 +42,17 @@
   --noto-sans-font-family: 'Noto Sans', sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  font-family: var(--noto-sans-font-family);
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  font-weight: 400;
+  font-style: normal;
+  text-decoration: none;
+  text-transform: none;
+  letter-spacing: normal;
+  line-height: 1.15;
+  color: var(--dl-color-theme-neutral-dark);
+  background-color: var(--dl-color-theme-neutral-light);
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  fill: var(--dl-color-theme-neutral-dark);
 }
 
 .button {
