--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -40,6 +40,7 @@
   --dl-radius-radius-buttonradius: 0;
   --dl-space-space-oneandhalfunits: 24px;
   --noto-sans-font-family: 'Noto Sans', sans-serif;
+  --roboto-font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -72,6 +73,7 @@ body {
   border-width: 1px;
   border-radius: 4px;
   background-color: var(--dl-color-theme-neutral-light);
+  font-family: var(--roboto-font-family);
 }
 .textarea {
   color: var(--dl-color-theme-neutral-dark);
